--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julian Ospina</title>
+    <style>
+        h1 {
+            color: blue; /* Cambia el color del texto del encabezado a azul */
+        }
+        p {
+            color: green; /* Cambia el color del texto del párrafo a verde */
+        }
+    </style>
 </head>
 <body>
     <h1>julian ospina</h1>
