--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <style>
         h1 {
             color: blue; /* Cambia el color del texto del encabezado a azul */
+            animation: colorChange 2s infinite; /* Añade la animación */
         }
         p {
             color: green; /* Cambia el color del texto del párrafo a verde */
+        }
+
+        @keyframes colorChange {
+            0% { color: blue; }
+            50% { color: red; }
+            100% { color: blue; }
         }
     </style>
 </head>
