Update project title and pricing details in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotizacion Plataforma Video Deportivo</title>
+    <title>Propuesta Plataforma Análisis Deportivo</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; background: #f5f5f5; padding: 20px; }
@@ -33,8 +33,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>COTIZACION DE PROYECTO</h1>
-            <h2>Plataforma de Analisis de Video Deportivo</h2>
+            <h1>PROPUESTA DE PROYECTO</h1>
+            <h2>Plataforma de Análisis de Video Deportivo</h2>
         </div>
         
         <div class="info-box">
@@ -45,7 +45,7 @@
         </div>
 
         <h3>1. RESUMEN DEL PROYECTO</h3>
-        <p>Plataforma completa de analisis de video deportivo para equipos y clubes. Los entrenadores pueden subir videos de partidos, generar analisis con estadisticas, compartir feedback con jugadores y padres, y gestionar todo desde un panel administrativo.</p>
+        <p>Plataforma completa de análisis de video deportivo para equipos y clubes. Los entrenadores pueden subir videos de partidos, generar analisis con estadisticas, compartir feedback con jugadores y gestionar todo desde un panel administrativo.</p>
 
         <h3>2. OPCIONES DISPONIBLES</h3>
         <div class="comparison">
@@ -65,7 +65,7 @@
             <div class="option-card">
                 <h4>OPCION B: Custom</h4>
                 <div class="price-box" style="background: #3b82f6;">
-                    <div class="amount">$54.835.200</div>
+                    <div class="amount">$34.000.000</div>
                     <p>COP</p>
                 </div>
                 <ul>
@@ -98,7 +98,7 @@
             <tr>
                 <td>Inversion</td>
                 <td><strong>$10M COP</strong></td>
-                <td>$54.8M COP</td>
+                <td>$34.8M COP</td>
             </tr>
             <tr>
                 <td>Tiempo</td>
@@ -144,7 +144,7 @@
             <li>Wordfence Security</li>
         </ul>
 
-        <h3>6. DESARROLLO CUSTOM - $54.835.200 COP</h3>
+        <h3>6. DESARROLLO CUSTOM - $34.000.000 COP</h3>
         <table>
             <tr>
                 <th>Concepto</th>
@@ -152,23 +152,19 @@
             </tr>
             <tr>
                 <td>Desarrollo (490 hrs)</td>
-                <td>$24.696.000</td>
+                <td>$24.800.000</td>
             </tr>
             <tr>
                 <td>Diseño UI/UX + Frontend</td>
-                <td>$13.440.000</td>
+                <td>$5.000.000</td>
             </tr>
             <tr>
                 <td>Testing + Hosting + Docs</td>
-                <td>$7.560.000</td>
-            </tr>
-            <tr>
-                <td>Contingencia (20%)</td>
-                <td>$9.139.200</td>
+                <td>$5.000.000</td>
             </tr>
             <tr style="background: #dbeafe;">
                 <th>TOTAL</th>
-                <th>$54.835.200</th>
+                <th>$34.000.000</th>
             </tr>
         </table>
 
@@ -219,19 +215,13 @@
             </tr>
         </table>
 
-        <p><strong>Comisiones de pago:</strong></p>
-        <ul>
-            <li>Stripe: 2.9% + $0.30 USD por transaccion</li>
-            <li>Mercado Pago: 3.99% + IVA por transaccion</li>
-        </ul>
-
         <h3>9. MI RECOMENDACION</h3>
         <div class="info-box" style="background: #fef3c7; border-color: #f59e0b;">
             <h4>Para MVP y Validacion Rapida:</h4>
             <p><strong>Elige WordPress ($10M)</strong> - Lanzas en 7 semanas, validas tu idea, y si funciona, migras a custom con las ganancias.</p>
             
             <h4 style="margin-top: 15px;">Para Proyecto Serio Largo Plazo:</h4>
-            <p><strong>Elige Custom ($54.8M)</strong> - Mayor inversion inicial pero total control, mejor rendimiento y escalabilidad sin limites.</p>
+            <p><strong>Elige Custom ($34M)</strong> - Mayor inversion inicial pero total control, mejor rendimiento y escalabilidad sin limites.</p>
         </div>
 
         <h3>10. CRONOGRAMA</h3>
@@ -354,7 +344,7 @@
 
         <div class="price-box" style="background: #3b82f6;">
             <h4 style="color: white; margin: 0 0 10px 0;">OPCION B: DESARROLLO CUSTOM</h4>
-            <div class="amount">$54.835.200 COP</div>
+            <div class="amount">$34.000.000 COP</div>
             <p style="margin-top: 10px;">Desarrollo completo - 13 semanas</p>
         </div>
 
