Update project description for target audience

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <h3>1. RESUMEN DEL PROYECTO</h3>
-        <p>Plataforma completa de análisis de video deportivo para equipos y clubes. Los entrenadores pueden subir videos de partidos, generar análisis con estadísticas, compartir feedback con jugadores y gestionar todo desde un panel administrativo.</p>
+        <p>Plataforma completa de análisis de video deportivo para Jugadores de fútbol. Los entrenadores pueden subir videos de partidos, generar análisis con estadísticas, compartir feedback con jugadores y gestionar todo desde un panel administrativo.</p>
 
         <h3>2. OPCIONES DISPONIBLES</h3>
         <div class="comparison">
