Fix typo in maintenance description

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <ul>
                     <li>7 semanas</li>
-                    <li>Facil de mantener</li>
+                    <li>Fácil de mantener</li>
                     <li>Plugins premium incluidos</li>
                 </ul>
             </div>
