Fix typos in index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </tr>
             <tr>
                 <td>Desarrollo (490 hrs)</td>
-                <td>$24.800.000</td>
+                <td>$24.000.000</td>
             </tr>
             <tr>
                 <td>Diseño UI/UX + Frontend</td>
@@ -168,7 +168,7 @@
             </tr>
         </table>
 
-        <h4>Stack Tecnologico:</h4>
+        <h4>Stack Tecnológico:</h4>
         <ul>
             <li>Frontend: Next.js + React + Tailwind CSS</li>
             <li>Backend: Node.js + PostgreSQL + Prisma</li>
@@ -225,11 +225,11 @@
             <tr>
                 <th>Fase</th>
                 <th>Actividad</th>
-                <th>Duracion</th>
+                <th>Duración</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>Configuracion inicial</td>
+                <td>Configuración inicial</td>
                 <td>1 semana</td>
             </tr>
             <tr>
@@ -259,7 +259,7 @@
             <tr>
                 <th>Fase</th>
                 <th>Actividad</th>
-                <th>Duracion</th>
+                <th>Duración</th>
             </tr>
             <tr>
                 <td>1</td>
