--- a/index.html
+++ b/index.html
@@ -288,18 +288,18 @@
             </tr>
         </table>
 
-        <h3>11. GARANTIAS Y SOPORTE</h3>
+        <h3>11. GARANTÍAS Y SOPORTE</h3>
         <h4>WordPress:</h4>
         <ul>
-            <li>30 dias de garantía contra errores</li>
+            <li>30 días de garantía contra errores</li>
             <li>1 mes de soporte técnico incluido</li>
-            <li>Respuesta en maximo 48 horas</li>
+            <li>Respuesta en máximo 48 horas</li>
             <li>Corrección de bugs críticos sin costo</li>
         </ul>
 
         <h4>Desarrollo Custom:</h4>
         <ul>
-            <li>60 dias de garantia contra errores</li>
+            <li>60 días de garantía contra errores</li>
             <li>2 meses de soporte técnico incluido</li>
             <li>Respuesta en máximo 24 horas</li>
             <li>Actualizaciones de seguridad incluidas</li>
@@ -317,7 +317,7 @@
             <li><strong>Reunión inicial (1 hora)</strong> - Definir opción y alinear expectativas</li>
             <li><strong>Definición de contenido</strong> - Logo, textos, videos de ejemplo</li>
             <li><strong>Firma de contrato</strong> - Alcance, cronograma, forma de pago</li>
-            <li><strong>Pago inicial</strong> - WordPress $4M (40%) o Custom $16.4M (30%)</li>
+            <li><strong>Pago inicial</strong> - WordPress $4M (40%) o Custom $10.2M (30%)</li>
         </ol>
 
         <h3>13. CONTÁCTO</h3>
@@ -326,11 +326,11 @@
             <p>Telefono: 3025820054</p>
             <p>Email: julianospina89@gmail.com</p>
             <p>WhatsApp: +57 302 582 0054</p>
-            <p>Ubicacion: Bogota, Colombia</p>
+            <p>Ubicacion: Bogotá, Colombia</p>
             <p>Disponibilidad: Lun-Vie 9am-6pm</p>
         </div>
 
-        <h3>14. RESUMEN DE INVERSION</h3>
+        <h3>14. RESUMEN DE INVERSIÓN</h3>
         <div class="price-box">
             <h4 style="color: white; margin: 0 0 10px 0;">OPCION A: WORDPRESS</h4>
             <div class="amount">$10.000.000 COP</div>
@@ -343,7 +343,7 @@
             <p style="margin-top: 10px;">Desarrollo completo - 13 semanas</p>
         </div>
 
-        <h3>15. TERMINOS Y CONDICIONES</h3>
+        <h3>15. TÉRMINOS Y CONDICIONES</h3>
         <ol>
             <li>Vigencia de la propuesta: 30 días calendario</li>
             <li>El cliente proporciona todo el contenido necesario</li>
