Fix typo in header from 'DECLARACION' to 'DECLARACIÓN'

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         </ol>
 
         <div class="footer">
-            <h3>DECLARACION FINAL</h3>
+            <h3>DECLARACIÓN FINAL</h3>
             <p>Esta propuesta representa una oportunidad de digitalizar la idea con una inversion accesible.</p>
             <p style="margin: 20px 0;">Como desarrollador comprometido, garantizo dedicación completa al proyecto y un buen producto de fácil entendimiento y funcional.</p>
             
